added grabbing input and comparing to the array

--- a/index.html
+++ b/index.html
@@ -18,17 +18,17 @@
         <!-- pokemon names will show up here -->
       </div>
       <div class="game-arena">
-        <form
-          class="game-arena__input-form"
-          name="userinput"
-          id="pokename"
-          action=""
-        >
-          <input class="game-arena__input" type="text" name="usertext" />
+        <form class="game-arena__input-form" name="userinput" id="pokename">
+          <input
+            class="game-arena__input"
+            type="text"
+            name="usertext"
+            autocomplete="off"
+          />
         </form>
         <div class="game-arena__status-container">
-          <div class="game-arena__correct-score">Correct</div>
-          <div class="game-arena__error-score">Wrong</div>
+          <div class="game-arena__correct-score"></div>
+          <div class="game-arena__error-score"></div>
           <div class="game-arena__timer"></div>
           Timer
         </div>
