made the list neverending

--- a/index.html
+++ b/index.html
@@ -38,7 +38,11 @@
               <div class="game-arena__error-score"></div>
             </div>
             <div class="game-arena__timer-container">
-              <div class="game-arena__timer">Timer</div>
+              <div class="game-arena__timer">
+                <div class="game-arena__timer-text">
+                  Timer
+                </div>
+              </div>
             </div>
           </div>
         </div>
