names are now random timer resets with button and the names are refreshed

--- a/index.html
+++ b/index.html
@@ -30,6 +30,7 @@
               name="usertext"
               autocomplete="off"
               placeholder="type the pokemon name and press enter."
+              disabled="true"
             />
           </form>
           <div class="game-arena__status-container">
@@ -45,6 +46,11 @@
               </div>
             </div>
           </div>
+          <section class="play">
+            <div class="play__container">
+              <button class="play__button">Play!</button>
+            </div>
+          </section>
         </div>
       </div>
     </div>
