styled play button made input field reset when playing again

--- a/index.html
+++ b/index.html
@@ -35,8 +35,8 @@
           </form>
           <div class="game-arena__status-container">
             <div class="game-arena__score-container">
-              <div class="game-arena__correct-score"></div>
-              <div class="game-arena__error-score"></div>
+              <div class="game-arena__correct-score">Correct: 0</div>
+              <div class="game-arena__error-score">Error: 0</div>
             </div>
             <div class="game-arena__timer-container">
               <div class="game-arena__timer">
