fixed styling, added icons flying around in the background

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
               type="text"
               name="usertext"
               autocomplete="off"
-              placeholder="type the pokemon name and press enter."
+              placeholder="Pokemon name goes in here"
               disabled="true"
             />
           </form>
@@ -51,9 +51,53 @@
               <button class="play__button">Play!</button>
             </div>
           </section>
+          <label class="play__instructions"
+            >type the pokemon name and press enter</label
+          >
         </div>
       </div>
     </div>
+    <div class="kudos__flat-icon">
+      Icons made by
+      <a
+        href="https://www.flaticon.com/authors/roundicons-freebies"
+        title="Roundicons Freebies"
+        >Roundicons Freebies</a
+      >
+      from
+      <a href="https://www.flaticon.com/" title="Flaticon">www.flaticon.com</a>
+    </div>
+    <div class="image__pokemon x1">
+      <img
+        src="./assets/bulbasaur.svg"
+        alt="bulbasaur"
+        class="image__pokemon y1"
+      />
+    </div>
+    <div class="image__pokemon x2">
+      <img
+        src="./assets/charmander.svg"
+        alt="charmander"
+        class="image__pokemon y2"
+      />
+    </div>
+    <div class="image__pokemon x3">
+      <img src="./assets/meowth.svg" alt="meowth" class="image__pokemon y3" />
+    </div>
+    <div class="image__pokemon x4">
+      <img src="./assets/pikachu.svg" alt="pikachu" class="image__pokemon y4" />
+    </div>
+    <div class="image__pokemon x5">
+      <img src="./assets/snorlax.svg" alt="snorlax" class="image__pokemon y5" />
+    </div>
+    <div class="image__pokemon x6">
+      <img
+        src="./assets/squirtle.svg"
+        alt="squirtle"
+        class="image__pokemon y6"
+      />
+    </div>
+
     <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
     <script src="./script/main.js"></script>
   </body>
