fixed some styling issues

--- a/index.html
+++ b/index.html
@@ -51,9 +51,9 @@
               <button class="play__button">Play!</button>
             </div>
           </section>
-          <label class="play__instructions"
-            >type the pokemon name and press enter</label
-          >
+          <p class="play__instructions">
+            type the pokemon name and press enter, case insensitive
+          </p>
         </div>
       </div>
     </div>
