fixed mobile issue with keyboard

--- a/index.html
+++ b/index.html
@@ -56,17 +56,20 @@
           </p>
         </div>
       </div>
+      <div class="kudos__flat-icon">
+        Icons made by
+        <a
+          href="https://www.flaticon.com/authors/roundicons-freebies"
+          title="Roundicons Freebies"
+          >Roundicons Freebies</a
+        >
+        from
+        <a href="https://www.flaticon.com/" title="Flaticon"
+          >www.flaticon.com</a
+        >
+      </div>
     </div>
-    <div class="kudos__flat-icon">
-      Icons made by
-      <a
-        href="https://www.flaticon.com/authors/roundicons-freebies"
-        title="Roundicons Freebies"
-        >Roundicons Freebies</a
-      >
-      from
-      <a href="https://www.flaticon.com/" title="Flaticon">www.flaticon.com</a>
-    </div>
+
     <div class="image__pokemon x1">
       <img
         src="./assets/bulbasaur.svg"
